# WordleHelper

./: .gitignore  CMakeLists.txt  LetterField.qml  Main.qml  Main.qml.autosave  README.md  file_parser.cpp  main.cpp  wordle_backend.cpp  wordle_backend.h  wordle_finder.cpp  wordle_finder.h
.github/workflows/: build.yml
dictionaries/: mots.txt
qml/components/: LetterField.qml
source/: file_parser.cpp  file_parser.h  wordle_backend.cpp  wordle_backend.h  wordle_finder.cpp  wordle_finder.h
